// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value=""
  />
</div>
`;

exports[`TextInput should be rendered correctly 2`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    className="container uui-icon uui-enabled"
    style={{}}
  >
    <svg
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled pointer"
    style={{}}
  >
    <svg
      className="flipY"
    />
  </div>
</div>
`;
